更新 DefaultGameBuilder 中的字符串格式化方式，并移除 GameInstanceManifest 中未使用的 isResolved 方法以简化代码